--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,3 +1,3 @@
 keybind = global:cmd+.=toggle_quick_terminal
 shell-integration = fish
-command = "/etc/profiles/per-user/allank/bin/fish"
+command = "/usr/local/bin/fish"
