feat: Implement Conductor framework and initial automation improvements
This squashed commit consolidates the initialization of the Conductor
spec-driven development framework and the completion of the first three tracks:

1. Conductor Setup: Established the project management structure,
   including tech-stack, workflows, and product vision.
2. Bootstrap Standardization: Improved idempotency of bootstrap scripts,
   added robust logging/error handling, and updated macOS system defaults.
3. Ghostty & Aerospace Fix: Resolved window interaction issues by
   disabling the macOS titlebar proxy icon.
4. Multi-Profile Support: Introduced "Home" vs "Work" profiles with
   templated Brewfiles and Git identities, including interactive
   prompts to keep PII out of the repository.

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,3 +1,4 @@
 keybind = global:cmd+.=toggle_quick_terminal
 shell-integration = fish
 command = "/usr/local/bin/fish"
+macos-titlebar-proxy-icon = hidden
